Fix distortion of avatar

--- a/components/ProfileData/ProfileData.sass
+++ b/components/ProfileData/ProfileData.sass
@@ -124,6 +124,7 @@
                 border-radius: 50%
                 width: 250px
                 height: 250px
+                object-fit: cover
 
         &__file-upload-wrapper
             $defaultColor: #4daf7c
